[package]
name = "WondKV"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc-catalog = "2.1.0"
axum = "0.5.7"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.81"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }